--- a/public/assets/global/css/responsive.css
+++ b/public/assets/global/css/responsive.css
@@ -12,6 +12,7 @@ VERSION : 1.1
 /*......................................................
 	DESKTOP LAYOUT
 ........................................................*/
+
 @media only screen and (max-width: 900px){
     .ramsh-menu ul li:last-child::after{
         display:none;
@@ -19,7 +20,12 @@ VERSION : 1.1
     
 }
 
-
+@media (min-width: 768px){
+	.navbar-nav > li > a {
+	    padding-top: 24px;
+	    padding-bottom: 15px;
+	}
+}
 /*......................................................
 	MOBILE LAYOUT
 ........................................................*/
