--- a/public/assets/global/css/style.css
+++ b/public/assets/global/css/style.css
@@ -756,6 +756,230 @@ span.jsnn-counter-label {
 .detailbox:hover {
     box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
+.technologysection{
+  background-image: url(../images/c-bg.jpg);
+}
+/*----------------------------our service build-------------------------------------------*/
+.solutions_sec {
+    /*margin-top: 30px;*/
+}
+.sol_sec_list{
+  margin-top: 40px;
+}
+
+.hover_box2:nth-child(1) {
+    background: #3db4e1;
+    width: 100%;
+    height: 295px;
+    z-index: 9;
+    position: absolute !important;
+    transition: all .3s linear;
+    opacity: 0;
+    top: -40px;
+    left:0;
+}
+.webservicesection{
+  padding: 30px 0 60px;
+}
+.hover_box2:nth-child(2) {
+    background: #ff8515;
+    width: 100%;
+    height: 295px;
+    z-index: 9;
+    position: absolute !important;
+    transition: all .3s linear;
+    opacity: 0;
+    top: 0;
+    left:0;
+}
+.hover_box2:nth-child(3) {
+    background: #0cc5cc;
+    width: 100%;
+    height: 295px;
+    z-index: 9;
+    position: absolute !important;
+    transition: all .3s linear;
+    opacity: 0;
+    top: 0;
+    left:0;
+}
+.hover_box2:nth-child(4) {
+    background: #ff8515;
+    width: 100%;
+    height: 295px;
+    z-index: 9;
+    position: absolute !important;
+    transition: all .3s linear;
+    opacity: 0;
+    top: 0;
+    left:0;
+}
+.solution_list ul{
+  display: flex;
+}
+.solution_list ul li{
+  width: 25%;
+}
+.solution_list ul li .solution_area {
+    width: 285px;
+    margin: auto;
+    padding: 0 17px;
+}
+a, circle, div, path, rect, svg {
+    transition: all .3s linear;
+    -webkit-transition: all .3s linear;
+}
+.arrow_pos_home {
+    position: absolute;
+    z-index: 9;
+    top: -12px;
+    left: 128px;
+}
+.solution_list ul li:nth-child(3) .arrow_col {
+    color: #0cc5cc;
+    font-size: 52px;
+}
+.solution_list ul li .arrow_col {
+    color: #00c6a3;
+    font-size: 52px;
+}
+.solution_list ul li:nth-child(2) .arrow_col {
+    color: #ff8515;
+    font-size: 52px;
+}
+.solution_list ul li:nth-child(1) .arrow_col {
+    color: #3db4e1;
+    font-size: 52px;
+}
+.list_web li{
+  width: 100% !important;
+  text-align: left;
+}
+.list_web ul {
+  display: block;
+  list-style-type: disc;
+  padding: 0 20px;
+  color: #000;
+}
+.list_web a {
+  color: #000;
+  text-align: left;
+  font-weight: 600;
+}
+.hover_box> div {
+    padding: 15px;
+}
+.hover_box_h {
+    font: 700 20px/22px Roboto,serif;
+    color: #fff;
+    text-transform: uppercase;
+    text-align: center;
+    padding-top:18px;
+}
+.web_d_box {
+    background: #ecf8fc;
+    margin-top: 26px;
+    padding: 24px 16px;
+    height: 170px;
+    position: relative;
+}
+.fa-sort-up:before, .fa-sort-asc:before {
+    content: "\f0de";
+}
+.rel {
+    position: relative;
+}
+.solution_list ul li:nth-child(1) .solution_img {
+    border: 1px solid #3db4e1;
+}
+.solution_list ul li:nth-child(2) .solution_img {
+    border: 1px solid #ff8515;
+}
+.solution_list ul li:nth-child(3) .solution_img {
+    border: 1px solid #0cc5cc;
+}
+.solution_list ul li:nth-child(4) .solution_img {
+    border: 1px solid #00c6a3;
+}
+.solution_list ul li .solution_area .solution_img {
+    width: 164px;
+    height: 164px;
+    margin: auto;
+    box-shadow: 1px 0 15px 6px #e9f4f8 inset;
+    overflow: hidden;
+    border-radius: 164px;
+}
+.solution_list ul li .solution_area figure {
+    width: 164px;
+    height: 164px;
+    display: table-cell;
+    vertical-align: middle;
+    text-align: center;
+}
+.solution_area:hover .hover_box2 {
+    opacity: 9;
+}
+.solution_list ul li .solution_h_txt {
+    font: 700 20px/45px Roboto,serif;
+    color: #fff;
+    text-transform: uppercase;
+    background: #3db4e1;
+    text-align: center;
+    margin-top: -30px;
+    border-radius: 5px;
+    box-shadow: 1px -10px 20px 0 #a1d6ea;
+}
+.solution_list ul li:nth-child(2) .solution_h_txt {
+    background: #ff8515;
+    box-shadow: 1px -10px 20px 0 #ffbb7d;
+}
+.solution_list ul li:nth-child(3) .solution_h_txt {
+    background: #0cc5cc;
+    box-shadow: 1px -10px 20px 0 #7ce0e4;
+}
+.solution_list ul li:nth-child(4) .solution_h_txt {
+    background: #00c6a3;
+    box-shadow: 1px -10px 20px 0 #7ae1cf;
+}
+.solutions_sec h2{
+  color:#000;
+}
+.hover_box3 {
+    background: #0cc5cc;
+    width: 100%;
+    height: 295px;
+    z-index: 9;
+    position: absolute;
+    transition: all .3s linear;
+    opacity: 0;
+    top: 0;
+    left: 0;
+}
+.mt10 {
+    margin-top: 10px;
+}
+.view_pos {
+    position: absolute;
+    z-index: 9;
+    top: 130px;
+    left: 102px;
+    background: #0b2954;
+    border: 1px solid #fff;
+    border-radius: 72px;
+    width: 72px;
+    height: 72px;
+}
+.white, .white a, .white a:hover {
+    color: #fff;
+    text-decoration: none;
+}
+.view_pos p a {
+    padding: 20px 0;
+    display: block;
+    color: #fff;
+    line-height: 16px;
+    text-transform: uppercase;
+}
 /*----------------------Solutions------------------------------------*/
 .back_gray {
     padding: 60px 0;
