--- a/public/assets/global/css/style.css
+++ b/public/assets/global/css/style.css
@@ -419,8 +419,9 @@ div.preloader {
   font-size: 2.0em;
   display: block;
   padding: 0;
-  height: 90px;
+  height: 80px;
   font-weight: 900;
+  /* margin-bottom: -20px; */
   color: #fff !important;
 }
 nav.nim-menu.navbar.navbar-default.headerbtm.allpageheader {
@@ -432,7 +433,7 @@ nav.nim-menu.navbar.navbar-default.headerbtm.allpageheader {
 }
 
 .navbar-default.headerbtm.allpageheader {
-    min-height: 90px;
+    min-height: 80px;
 }
 .nim-menu.navbar-default .navbar-nav > li > a {
   
@@ -487,7 +488,9 @@ nav.nim-menu.navbar.navbar-default.headerbtm.allpageheader {
   }
         
 .navbar-brand img{
-  height: 90px;
+  /* height: 70px; */
+  height: 100%;
+  object-fit: contain;
  }  
 .headerTop{
   background-color: rgb(0, 0, 0,.9);
@@ -1429,7 +1432,7 @@ img.circle-img {
   line-height: 29px;
   font-size: 14px;
   /*color:#202020;*/
-  min-height: 150px;
+  /*min-height: 150px;*/
 }
 .nim-service:hover{
   box-shadow: -14.142px 14.142px 20px 0px rgba(157, 157, 157, 0.5);
@@ -1712,7 +1715,7 @@ ul.footer-links li {
 .medica-appointment-card label{
   color: #000;
   font-family: bentonsans-regular-webfont, Tahoma, sans-serif;
-  font-size: 16px;
+  font-size: 14px;
 }
 .medica-contact-card {
     background-color: #093f86;
@@ -1945,6 +1948,7 @@ select.form-control:not([size]):not([multiple]) {
 }
 .sendenquiry{
   background-color: #282626;
+  color: #fff;
   border-radius: 20px;
 }
 .sendenquiry:hover{
@@ -2032,6 +2036,7 @@ a.demoregisterbtn {
 
 .medica-appointment-card .form-control {
    border: 1px solid #ddd;
+   height: 35px;
 }
 
 .submitBTn {
@@ -2048,4 +2053,42 @@ a.demoregisterbtn {
 }
 .has-error .help-block{
   color:#FF0000 !important;
+}
+.separator {
+    line-height: .5em;
+    margin: 30px 0;
+}
+.icon-service-img-module .separator span {
+    color: #888;
+}
+.headerTop ul{
+  margin-bottom: 0;
+}
+.separator span:before, .separator span:after {
+    content: "";
+    position: absolute;
+    top: 5px;
+    width: 275px;
+    border-bottom-width: 1px;
+    border-bottom-style: solid;
+}
+.separator span:before {
+    right: 100%;
+    margin-right: 15px;
+}
+.separator span:after {
+    left: 100%;
+    margin-left: 15px;
+}
+#loading {
+    -webkit-animation: rotation 2s infinite linear;
+}
+
+@-webkit-keyframes rotation {
+    from {
+        -webkit-transform: rotate(0deg);
+    }
+    to {
+        -webkit-transform: rotate(180deg);
+    }
 }
