--- a/public/assets/global/css/responsive.css
+++ b/public/assets/global/css/responsive.css
@@ -17,6 +17,9 @@ VERSION : 1.1
     .ramsh-menu ul li:last-child::after{
         display:none;
     }
+    .solution_list ul li{
+    	width: 50%;
+    }
     
 }
 
