--- a/public/assets/global/css/style.css
+++ b/public/assets/global/css/style.css
@@ -1,4 +1,4 @@
-/*
+
 ++++++++++++++++++++++++++++++++++++++++++++++++++++++
 AUTHOR : Vijayan PP
 PROJECT : Nim-MUTLIT PURPOSE LANDING PAGE TEMPLATE
@@ -430,6 +430,8 @@ nav.nim-menu.navbar.navbar-default.headerbtm.allpageheader {
 .allpageheader.nim-menu.navbar-default .navbar-nav > li > a{
   color:#000 !important;
   padding-top: 30px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: 700;
 }
 
 .navbar-default.headerbtm.allpageheader {
@@ -513,10 +515,10 @@ nav.nim-menu.navbar.navbar-default.headerbtm.allpageheader {
 
 .main-heading
 {
-   background: url(../../../images/main2.jpg) center center no-repeat;
+   /*background: url(../../../images/main2.jpg) center center no-repeat;
   background-size:cover;
   background-attachment: fixed;
-  color: #cfcfcf;
+  color: #cfcfcf;*/
         /*margin-top:80px;*/
 }
 
@@ -554,7 +556,7 @@ p.lead {
   -ms-transform: translateY(-50%);
   transform: translateY(-50%);
   position: absolute;
-  top: 50%;
+  top: 41.9%;
   left: 0;
   right: 0;
 }
@@ -562,8 +564,15 @@ p.lead {
 .main-heading-title {
   font-weight: 900;
   color: #ffffff;
+  position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
   text-transform: uppercase;
   font-size: 50px;
+  font-family: Georgia, Times, "Times New Roman", serif;
+  font-style: italic;
+  font-variant: normal;
   margin-bottom: 30px;
   text-shadow: rgba(0,0,0,0.498039) 2px 2px 2px;
   letter-spacing: 0.02em;
@@ -856,6 +865,7 @@ span.jsnn-counter-label {
 .techlist ul li img{
   height: 100px;
   width: 110px;
+  padding: 15px;
 }
 .techlist ul {
     text-align: center;
@@ -1312,7 +1322,7 @@ a, circle, div, path, rect, svg {
 ------------------------------*/
 .client-testimonial
 {
- background:url("../../../images/img-2.jpg");
+ /*background:url("../../../images/img-2.jpg");*/
  background-position: center center;
  background-attachment: fixed;
  background-size:cover;
@@ -1327,11 +1337,72 @@ img.circle-img {
 }
 
 
-#testimonial {
-  padding: 30px 0;
+section.testmonialsection {
+    padding: 50px 0;
+}
+.testimonial-head h3{ 
+  /*font-family: open-sans;*/
+  font-weight: 600;
+  font-size: 40px;
+}
+.testimonial-name{
+  color:#7e9096;
+  font-size: 15px !important;
+  font-weight: 500;
+}
+span.pd-left>p {
+    /*margin-bottom: 4px;*/
+    font-size: 18px;
+}
+.testimonial-head p{
+  font-size:18px;
+  color:#94a3a8;
+  margin-bottom: 30px;
+  margin-top: 30px;
+  font-family: Myriad Pro;
+}
+.testimonial-text{
+  background-color: #1d2024;
+  border: 1px solid #1d2024;
+  border-radius: 3px;
+  margin-bottom: 30px;
+  position: relative;
+}
+
+.testimonial-text:after{
+  content: "";
+    position: absolute;
+    border-left: 22px solid transparent;
+    border-top: 22px solid #1d2024;
+    left: 67px;
+    border-right: 23px solid transparent;
+}
+.testimonial-user span img {
+    height: 75px;
+    width: 75px;
+}
+.testimonial-user span.pd-left{
+  padding-left: 10px;
+    line-height: 12px;
+    font-size: 16px;
+    font-weight: 600;
+}
+.testimonial-user {
+    display: flex;
+    align-items: center;
+}
+.testimonial-text p{
+  font-family: Georgia, Times, "Times New Roman", serif; font-style: italic; font-variant: normal;line-height: 26.4px;
+    color: #fefefe;
+    display: flex;
+    font-size: 16px;
+    align-items: center;
+    min-height: 110px;
+    overflow: hidden;
+    padding: 26px;
 }
 .item h5 {
-    color: #fff;
+    color: #201f1f;
     font-weight: 400;
     line-height: 27px;
     font-size: 17px;
@@ -1452,6 +1523,115 @@ img.circle-img {
     -ms-box-shadow:2px 3px 5px 2px rgba(0,0,0,0.3);
 }
 
+
+ /*-----------------------section--------------------------------*/
+
+ .intro-section, .intro-section .container .row {
+    height: 100vh;
+    min-height: 500px;
+}
+.intro-section {
+    position: relative;
+}
+.intro-section:before {
+    content: "";
+    position: absolute;
+    height: 100%;
+    width: 70%;
+    background: #352961;
+    border-bottom-right-radius: 200px;
+}
+.intro-section h1 {
+    line-height: 45px;
+    font-family: 'Open Sans', sans-serif;
+    font-weight: 900;
+    color: #fff;
+}
+.intro-section p {
+    color: rgba(255, 255, 255, 0.5);
+    font-size: 15px;
+    max-width: 400px;
+}
+.custom-owl-carousel .owl-custom-direction a:last-child {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+}
+.custom-owl-carousel .owl-custom-direction a {
+    z-index: 1;
+    display: inline-block;
+    padding: 28px 30px;
+    position: relative;
+    background: #dc3545;
+    float: left;
+}
+.custom-owl-carousel .owl-custom-direction a {
+    z-index: 1;
+    display: inline-block;
+    padding: 12px 24px;
+    position: relative;
+    background: #dc3545;
+    float: left;
+}
+.custom-owl-carousel .owl-custom-direction a i{
+  color:#fff;
+  font-size: 16px;
+}
+.custom-owl-carousel .owl-custom-direction a span{
+    font-size: 1.5rem;
+    display: inline-block;
+    position: absolute;
+    top: 50%;
+    color: #fff;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+}
+.icon-keyboard_arrow_left:before {
+    content: "\e314";
+}
+.intro-section .btn {
+    border: 2px solid #fff;
+    color: #fff;
+}
+.btn-outline-light:hover {
+    color: #212529;
+    background-color: #f8f9fa;
+    border-color: #f8f9fa;
+}
+.ml-auto, .mx-auto {
+    margin-left: auto!important;
+}
+.custom-owl-carousel .owl-custom-direction {
+    position: absolute;
+    bottom: -20px;
+    z-index: 9;
+    left: 50%;
+    -webkit-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    transform: translateX(-50%);
+}
+.custom-owl-carousel .slide-one-item-alt {
+    border-top-left-radius: 200px;
+    overflow: hidden;
+    -webkit-box-shadow: 0 30px 100px -20px rgba(0, 0, 0, 0.4);
+    box-shadow: 0 30px 100px -20px rgba(0, 0, 0, 0.4);
+}
+.img-height{
+    height: 400px;
+    width: 100%;
+}
+/*.custom-owl-carousel .owl-theme .owl-controls {
+    margin-top: -30px;
+}*/
+.align-items-center {
+    -webkit-box-align: center!important;
+    display: flex;
+    flex-wrap: wrap;
+    -ms-flex-align: center!important;
+    align-items: center!important;
+}
+/*-------------------------End section------------------------------*/
 /*----------------CONTACTUS
 
 -------------------------------------------------------*/
@@ -2081,10 +2261,12 @@ a.demoregisterbtn {
     margin-left: 15px;
 }
 #loading {
-    -webkit-animation: rotation 2s infinite linear;
+    /*-webkit-animation: rotation 2s infinite linear;*/
 }
-
-@-webkit-keyframes rotation {
+.white {
+    color: #fff;
+}
+/*@-webkit-keyframes rotation {
     from {
         -webkit-transform: rotate(0deg);
     }
