--- a/public/assets/global/css/style.css
+++ b/public/assets/global/css/style.css
@@ -190,7 +190,7 @@ text-align:justify;
     /*margin: 0 auto;*/
     padding-top: 15px;
     font-weight: 500;
-    text-align: left;
+    text-align: center;
 }
 
 .gap
@@ -198,38 +198,25 @@ text-align:justify;
     width:100%;
     height:2em;
 }
-.title {
-  font-weight: 700;
-  letter-spacing: 1px;
+h3.title {
   text-transform: uppercase;
-  font-family: 'Droid Serif',serif
-  font-size: 30px;
-  text-align: center;
-  /* border-bottom: 1px dashed; */
-  position: relative;
+  background: linear-gradient(to right, #aa246da8 0%, #330867 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  font-size: 55px;
+  font-family: "Poppins", sans-serif;
 }
 .subscribe{
    font-weight: 700;
   letter-spacing: 1px;
   text-transform: uppercase;
-  font-family: bentonsans-regular-webfont,  Tahoma, Sans-Serif
+  font-family: bentonsans-regular-webfont,  Tahoma, Sans-Serif;
   font-size: 30px;
   /* border-bottom: 1px dashed; */
   position: relative;
 }
 
-.title:after {
-    content:'';
-    position:absolute;
-    /* top: 0; */
-    left: 0;
-    right: 0;
-    margin: 0 auto;
-    bottom: -6px;
-    width: 100px;
-    background: #000;
-    height: 2px;
-}
+
 .scroll-block {
   height: 100%;
   overflow-x: hidden;
@@ -523,7 +510,7 @@ nav.nim-menu.navbar.navbar-default.headerbtm.allpageheader {
 }
 
 .overlay{
-    //background-attachment: fixed;
+    /* background-attachment: fixed; */
     height:auto;
     height:100%;
     /*background: rgba(0,0,0);*/
@@ -752,7 +739,8 @@ span.jsnn-counter-label {
   margin-bottom: 30px;
 }
 .about-box i {
-  font-size: 36px;
+  font-size: 46px;
+  color: rebeccapurple;
 }
 .about-box .about-line {
   border-left: 2px solid #eee;
@@ -1817,8 +1805,8 @@ ul.footer-links li {
 
 .social li a:hover {
 
-  background:#f8198d;
-  color: #000;
+  background:black;
+  color: white;
   transform: rotate(360deg);
 }
 
@@ -2091,10 +2079,10 @@ select.form-control:not([size]):not([multiple]) {
 .demoregisterbtn {
 
     border: none;
-    background: rgb(15, 87, 138);
+    /* background: rgb(40, 51, 60); */
     padding: 10px 43px;
     font-size: 18px;
-    color: #fff;
+    color: black;
     text-transform: uppercase;
     letter-spacing: 0px;
 
@@ -2127,12 +2115,15 @@ select.form-control:not([size]):not([multiple]) {
 
 }
 .sendenquiry{
-  background-color: #282626;
+  background: #9ba4e3;
   color: #fff;
   border-radius: 20px;
+  transition: all .3s ease-in-out;
 }
 .sendenquiry:hover{
-  color:#0f578a;
+  color: black;
+  transform: scale(1.01);
+  letter-spacing: .3px;
 }
 .email-detailsection {
 
@@ -2150,7 +2141,7 @@ select.form-control:not([size]):not([multiple]) {
   font-size: 18px;
   font-weight: 400;
   font-weight: lighter;
-  color: #f8198d;
+  color: #9BA4E4;
 }
 .contactbg{
   background-color: #f1f1f1;
@@ -2198,6 +2189,7 @@ select.form-control:not([size]):not([multiple]) {
    -webkit-transition: .2s ease-in 0s;
    -moz-transition: .2s ease-in 0s;
    -ms-transition: .2s ease-in 0s;
+   transform: scale(1.01)
 }
 
 a.demoregisterbtn {
@@ -2205,6 +2197,7 @@ a.demoregisterbtn {
    width: 100%;
    display: block;
    border: 1px solid rgb(15, 87, 138);
+   border-radius: 7px
 }
 
 .medica-appointment-card {
@@ -2273,4 +2266,150 @@ a.demoregisterbtn {
     to {
         -webkit-transform: rotate(180deg);
     }
+}
+*/
+
+.portfolio-row{
+  display: grid;
+  grid-template-columns:  repeat(auto-fit, minmax(280px, 1fr)) !important;
+  grid-column-gap: 31px;
+  grid-row-gap: 31px;
+  width: 100%;
+  margin: auto;
+}
+.item-wrapper{
+  width: 100%;
+  
+}
+.portfolio-row .item-wrapper .image-wrapper{
+  height: 220px;
+  position: relative; 
+  
+}
+
+.item-overlay{
+  position: absolute;
+  width:100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+}
+
+
+.item-overlay span{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background:#222 url("../../../images/plus.png") center center no-repeat;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0);
+  opacity: 0;
+  z-index:99;
+  -webkit-transition: opacity 250ms linear;
+  transition: opacity .5s ease-in-out;
+}
+.image-wrapper:hover .item-overlay span{
+  opacity: 0.6;
+  transform: scale(1.1);
+}
+.image-wrapper:hover img{
+  -moz-transform: scale(1.1); 
+  -webkit-transform: scale(1.1); 
+  -o-transform: scale(1.1); 
+  transform: scale(1.1); 
+}
+
+.work-desc{
+  width: 100%;
+  padding: 10px 20px;
+  border-top: none;
+  -webkit-border-bottom-right-radius: 5px;
+-webkit-border-bottom-left-radius: 5px;
+-moz-border-radius-bottomright: 5px;
+-moz-border-radius-bottomleft: 5px;
+border-bottom-right-radius: 5px;
+border-bottom-left-radius: 5px;
+  position: relative;
+  margin-top: 11px;
+  background: #4d41a0;
+  
+}
+.work-desc h3{
+  
+  font-size: 0.93em;
+  font-weight: 300;
+  text-transform: capitalize;
+  font-family: Arial, Helvetica, sans-serif;
+  margin-bottom: 5px;
+  
+}
+
+.work-desc h3 a {
+  color: #fff;
+  font-size: 25px;
+  /*font-family: 'loberato',cursive;*/
+}
+.work-desc span {
+margin-top: 10px;
+font-size:18px;
+/*font-family: 'loberato',cursive;*/
+}
+
+
+
+.image-wrapper img{
+     width: 100%;
+     height: 100%;
+}
+
+
+.brk-btn {
+  position: relative;
+  background: none;
+  color: aqua;
+  text-transform: uppercase;
+  text-decoration: none;
+  margin-top: 18px;
+  padding: 1px;
+}
+.brk-btn h3{
+  margin-top: 9px;
+}
+.brk-btn::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10%;
+  background: #222;
+  height: 0.3em;
+  right: 20%;
+  top: -0.21em;
+  transform: skewX(-45deg);
+  -webkit-transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
+}
+.brk-btn::after {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 10%;
+  background: #222;
+  height: 0.3em;
+  left: 20%;
+  bottom: -0.25em;
+  transform: skewX(45deg);
+  -webkit-transition: all 0.45 cubic-bezier(0.86, 0, 0.07, 1);
+  transition: all 0.45s cubic-bezier(0.86, 0, 0.07, 1);
+}
+.brk-btn:hover::before {
+  right: 80%;
+}
+.brk-btn:hover::after {
+  left: 80%;
+}
+
+.brk-btn span{
+  color: black;
 }
