--- a/public/assets/global/css/style.css
+++ b/public/assets/global/css/style.css
@@ -597,11 +597,6 @@ p.lead {
 /*----------------ABOUT US
 
 -------------------------------------------------------*/
-.aboutus>.container
-{
-    padding:60px 0px;
-  
-}
 .morethan{
   color:#fff;
 }
@@ -1338,8 +1333,11 @@ section.testmonialsection {
   font-weight: 500;
 }
 span.pd-left>p {
-    /*margin-bottom: 4px;*/
+    margin-bottom: 4px;
     font-size: 18px;
+}
+.headerTop ul li i.fa-phone {
+    transform: rotate(90deg);
 }
 .testimonial-head p{
   font-size:18px;
@@ -2102,9 +2100,7 @@ select.form-control:not([size]):not([multiple]) {
     margin: 30px 0;
 
 }
-.contactWrapperr>.container{
-  padding: 0;
-}
+
 .contactus-section p {
     font-weight: 400;
     font-size: 14px;
