--- a/public/assets/global/css/IgnitorproStyle.css
+++ b/public/assets/global/css/IgnitorproStyle.css
@@ -53,11 +53,10 @@ h3.title {
 
 h3.title {
     text-transform: uppercase;
-  background: linear-gradient(to right, #aa246da8 0%, #330867 100%);
+  background-color: #080808;
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   font-size: 45px;
-  font-family: "Poppins", sans-serif;
   margin-top: 0;
 }
 
