--- a/public/assets/global/css/responsive.css
+++ b/public/assets/global/css/responsive.css
@@ -39,14 +39,14 @@ VERSION : 1.1
     	justify-content: center;
     }
     .navbar-default .navbar-toggle, .navbar-default .navbar-toggle {
-    	background-color: #2196F3;
+    	background-color: #ff384b;
 	}
 	.navbar-default .navbar-toggle:hover, .navbar-default .navbar-toggle:focus{
-    	background-color: #2196F3;
+    	background-color: #ff384b;
     	box-shadow: none;
 	}
 	.navbar-default .navbar-toggle {
-	    border-color: #2196f3;
+	    border-color: #ff384b;
 	    margin-top: 20px;
 	}
 	.navbar-default .navbar-toggle .icon-bar{
@@ -134,7 +134,7 @@ VERSION : 1.1
 	    padding-bottom: 20px;
 	}
 	h3.title {
-	    font-size: 26px !important;
+	    font-size: 30px !important;
 	}
 	.webservicesection{
 		padding: 30px 0 30px;
@@ -146,9 +146,26 @@ VERSION : 1.1
 		font-size: 20px;
 	}
 }
+@media (max-width: 576px){
+	.year-experience {
+	    padding: 33px 30px;
+	}
+	.figure {
+	    font-size: 70px;
+	}
+	p.full.years {
+	    font-size: 30px;
+	}
+}
 @media (max-width: 420px){
 	.headerTop ul li{
 		padding-right: 0;
+	}
+	blockquote{
+		border-left:0;
+	}
+	.cd-slider{
+		height: 50vh;
 	}
 	.trainingknow h3{
 		font-size: 30px;
